--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap');
 
 *,
 *::before,
 *::after {
     box-sizing: inherit;
     font-family: 'Nunito';
+    font-weight: 300;
 }
 
 body {
@@ -33,7 +34,7 @@ main {
 
 .main-profile img {
     border-radius: 100%;
-    width: 20%;
+    width: 15%;
     border: 5px solid white;
 }
 
@@ -41,9 +42,23 @@ main {
     margin-bottom: 70px;
 }
 
+.column-format {
+    margin-top: -7px;
+}
+
+.column-format-follows {
+    padding-top: 2px;
+}
+
 .main-profile_name-format {
     color: #337ab7;
     font-size: 1.2rem;
+    font-weight: 400;
+}
+
+.main-profile_numbers {
+    font-size: 1.2rem;
+    font-weight: 400;
 }
 
 .main-profile_logged-in {
@@ -52,13 +67,13 @@ main {
 }
 
 .main-profile_second-text {
-    color: #bbbbbb;
+    color: #9b9fa6;
     margin-top: -15px;
 }
 
 .main-profile_follow-button {
     text-align: right;
-    width: 350px;
+    width: 450px;
     margin-bottom: 70px;
     box-shadow: none;
 }
@@ -71,6 +86,7 @@ main {
     border: 1px solid #cccccc;
     font-size: 1.1rem;
     color: black;
+    font-weight: 300;
 }
 
 .main-profile_line-separator {
@@ -86,28 +102,29 @@ main {
 .main-summary {
     background-color: #f1f1f1;
     height: 195px;
-    margin-top: -40px;
+    margin-top: -32px;
     color: #7a7a7a;
     box-shadow: none;
-
 }
 
 .main-summary_general-info {
     padding-top: 5px;
-    margin-left: 280px;
+    margin-left: 260px;
 }
 
 .main-summary_buttons {
-    margin-left: 280px;
-
+    margin-left: 260px;
 }
 
 .main-summary_buttons button {
-    padding: 10px 30px;
+    padding: 10px 35px;
     border-radius: 5px 5px 0 0;
     color: #338ac6;
     background-color: #e1e1e1;
     border: none;
+    font-weight: 300;
+    font-size: 14px;
+    margin-right: 5px;
 }
 
 .main-summary_buttons button:hover {
@@ -121,18 +138,18 @@ main {
     border-radius: 5px 5px 0 0;
     margin: 30px auto 0 auto;
     width: 1250px;
-    padding: 3px;;
-    padding-bottom: 60px;
+    padding: 3px;
+    padding-bottom: 65px;
 }
 
 .main-textarea textarea {
-    display:block;  
+    display: block;
     border: none;
     border-radius: 5px 5px 0 0;
     max-height: 160px;
     min-height: 80px;
-    min-width: 97.9%;
-    max-width: 97.9%;
+    min-width: 97.95%;
+    max-width: 97.95%;
     margin-top: 0px;
     padding: 7px 13px;
 }
@@ -144,13 +161,14 @@ main {
 
 .main-textarea-button {
     float: right;
-    padding: 8px 20px;
+    padding: 8px 25px;
     margin: 12px 10px;
     background-color: #337ab7;
     color: white;
     border-radius: 5px;
     box-shadow: none;
     border: 1px solid #337ab7;
+    font-size: 1rem;
 }
 
 .main-textarea-button:hover {
@@ -160,31 +178,31 @@ main {
 
 .main-textarea-button:active {
     position: relative;
-            top: 1px;
+    top: 1px;
 }
 
 
-.main-post{
+.main-post {
     width: 92%;
     margin: auto;
     margin-top: 30px;
 }
 
-.main-post a{
+.main-post a {
     text-decoration: none;
     color: #337ab7;
 }
 
-.main-post{
+.main-post {
     text-decoration: none;
     color: black;
 }
 
-.comment-format{
+.comment-format {
     margin-left: 60px;
 }
 
-.main-post_format{
+.main-post_format {
     padding-left: 90px;
     margin-top: 10px;
 }
@@ -192,16 +210,16 @@ main {
 .main-post img {
     position: absolute;
     border-radius: 100%;
-    width: 40px;
+    width: 45px;
     border: 5px solid #eef2f5;
 }
 
-.main-post_line-separator{
+.main-post_line-separator {
     border: 1px solid #ebebeb;
     margin: 30px auto;
 }
 
-.main-comment{
+.main-comment {
     width: 85.15%;
     margin-top: 30px;
     margin: auto;
@@ -209,52 +227,52 @@ main {
     margin-bottom: 10px;
 }
 
-.main-comment p{
+.main-comment p {
     margin: 10px;
 }
 
-.main-comment img{
+.main-comment img {
     position: absolute;
     border-radius: 100%;
     width: 40px;
     height: 40px;
 }
 
-.main-comment_format{
+.main-comment_format {
     margin-top: -5px;
     padding-left: 60px;
 }
 
-.main-post_time-format{
-    color: #bbbbbb;
+.main-post_time-format {
+    color: #9b9fa6;
     margin-top: -18px;
     font-size: 0.9rem;
 }
 
-.main-comment_name{
+.main-comment_name {
     color: #337ab7;
     font-weight: bold;
 }
 
-.main-comment_line-separator{
+.main-comment_line-separator {
     border: 1px solid #ebebeb;
-    margin: 25px auto;
+    margin: 20px auto;
     margin-left: 213px;
     width: 80.15%;
 }
 
-.main-comment-button_format{
+.main-comment-button_format {
     color: #8f8f8f;
     font-size: 0.9rem;
     font-weight: bold;
 
 }
 
-.button{
+.button {
     text-align: center;
 }
 
-.button-load_more{
+.button-load_more {
     background-color: #fff;
     box-shadow: none;
     padding: 8px 14px;
@@ -262,15 +280,16 @@ main {
     font-size: 1.1rem;
     margin-bottom: 20px;
     border-radius: 5px;
+    font-weight: 300;
 }
 
-.button-load_more:hover{
+.button-load_more:hover {
     border: 1px solid white;
     border-radius: 5px;
     background-color: #c2c2c2;
 }
 
-.button-load_more:active{
+.button-load_more:active {
     position: relative;
-            top: 1px;
+    top: 1px;
 }
