--- a/style.css
+++ b/style.css
@@ -116,6 +116,11 @@ main {
     margin-left: 260px;
 }
 
+.main-summary_buttons button:first-child {
+    background-color: white;
+    color: black;
+}
+
 .main-summary_buttons button {
     padding: 10px 35px;
     border-radius: 5px 5px 0 0;
@@ -125,11 +130,13 @@ main {
     font-weight: 300;
     font-size: 14px;
     margin-right: 5px;
+    cursor: pointer;
 }
 
 .main-summary_buttons button:hover {
     background-color: white;
     color: black;
+    transition: 0.15s;
 }
 
 .main-textarea {
@@ -169,11 +176,12 @@ main {
     box-shadow: none;
     border: 1px solid #337ab7;
     font-size: 1rem;
+    cursor: pointer;
 }
 
 .main-textarea-button:hover {
     background-color: #3e96e2;
-
+    transition: 0.15s;
 }
 
 .main-textarea-button:active {
@@ -281,12 +289,14 @@ main {
     margin-bottom: 20px;
     border-radius: 5px;
     font-weight: 300;
+    cursor: pointer;
 }
 
 .button-load_more:hover {
-    border: 1px solid white;
+    transition: 0.15s;
     border-radius: 5px;
-    background-color: #c2c2c2;
+    color: white;
+    background-color: #b4b4b4;
 }
 
 .button-load_more:active {
